// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component - layout should render 1`] = `
<main
  className="jsx-3688675360  "
/>
`;

exports[`component - layout should render with props 1`] = `
<main
  className="jsx-3688675360  "
>
  <b>
    #content
  </b>
</main>
`;
